test/testdata/functions/declaration/invalid_binary_op_error.lox
fun f() {}
f - 1; // error: '-' operator cannot be used with types 'function' and 'number'
